# mk2

./: .gitignore  Cargo.toml  readme.md  sdkconfig.defaults
.cargo/: config.toml
images/: mk2
src/: main.rs  main_tmp.rs
