[package]
name = "mk2"
version = "0.1.0"
edition = "2021"
authors = ["Nisseya <yassinehadi78190@gmail.com>"]
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "mk2"
harness = false

# Cargo.toml
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 0

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
embedded-svc = "0.28.1"
anyhow = "1.0.98"


[build-dependencies]
embuild = "0.33"
